- Added footer component and styled it - Added image to the menu section - Completed styling the page for desktops by moving the about and menu sections into their own flex rows completed some error fixing on IOS
Added the fonts to the SCSS file so they always render for devices.
Changed the meta title and description

--- a/src/components/base/card.style.scss
+++ b/src/components/base/card.style.scss
@@ -1,6 +1,9 @@
 .card-container {
   background-color: var(--red);
-  border-radius: 20px 20px 0 0;
+  border-radius: 20px;
   padding: 1.6rem;
   color: var(--off-white);
+  margin: 4rem 0;
+  max-width: 500px;
+  box-shadow: 0 0 0.6rem rgba(black, 0.4);
 }
